Ensure the page width is capped at viewport width
Even though there are no elements "breaking out" of the expected boxes
of the DOM, Firefox adds a horizontal scrollbar for some resolutions.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+	max-width: 100vw;
+	overflow-x: hidden;
+}
 body {
 	display: -webkit-box;
 	display: -ms-flexbox;
